# install_minizip

./: CMakeLists.txt
config/include/antares/config/: config.h
foo/: CMakeLists.txt  Foo.cpp  Foo.h
packaging/: CMakeLists.txt
